google translate support

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,17 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Бланки</title>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <script type="text/javascript">
+      function googleTranslateElementInit() {
+        new google.translate.TranslateElement({pageLanguage: 'bg'}, 'google_translate_element');
+      }
+    </script>
   </head>
   <body>
-    <!-- Global site tag (gtag.js) - Google Analytics application -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-138342505-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-138342505-1');
-    </script>
     <noscript>
       <strong>We're sorry but client doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
